--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.18.4",
     "gatsby-background-image": "^0.9.11",
     "gatsby-image": "^2.2.34",
+    "gatsby-plugin-playground": "^1.0.6",
     "gatsby-plugin-sass": "^2.1.24",
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-plugin-styled-components": "^3.1.14",
     "gatsby-plugin-transition-link": "^1.16.2",
+    "gatsby-source-contentful": "^2.1.66",
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-sharp": "^2.3.6",
     "gsap": "^3.0.1",
